Project gift_reco_apl {
  database_type: "PostgreSQL"
  note: "Generated from docs/db/database_schema.md"
}

// ------------------------------------------------------------
// Enums
// ------------------------------------------------------------
Enum UserRole {
  USER
  ADMIN
}

Enum Gender {
  MALE
  FEMALE
}

Enum AgeRange {
  TEEN
  TWENTIES
  THIRTIES
  FORTIES
  FIFTIES
  SIXTIES
  SEVENTIES_PLUS
  UNKNOWN
}

Enum RelationType {
  BOSS
  SUBORDINATE
  COWORKER
  CLIENT
  FRIEND
  PARTNER
  SPOUSE
  PARENT
  CHILD
  SIBLING
  GRANDPARENT
  RELATIVE
  TEACHER
  OTHER
  UNSPECIFIED
}

Enum EventType {
  BIRTHDAY
  CHRISTMAS
  VALENTINE
  WHITE_DAY
  MOTHERS_DAY
  FATHERS_DAY
  RESPECT_FOR_AGED
  WEDDING
  BIRTH_CELEBRATION
  MOVING
  PROMOTION
  THANKS
  APOLOGY
  JOB_CHANGE
  ANNIVERSARY
  NONE
}

Enum BudgetRange {
  U3000
  B3000_5000
  B5000_8000
  B8000_12000
  B12000_20000
  O20000
}
// ------------------------------------------------------------
// Tables (schema: auth)
// ------------------------------------------------------------
Table "auth.users" {
  id uuid [pk]
}
// ------------------------------------------------------------
// Tables (schema: apl)
// ------------------------------------------------------------
// ユーザー系テーブル
// ------------------------------------------------------------
Table "apl.user_profile" {
  id uuid [pk, note: "FK -> auth.users(id)"]
  name varchar [not null]
  role varchar [default: "USER", note: "USER/ADMIN"]
  created_at timestamptz [not null, default: "now()"]
}

Table "apl.event" {
  id uuid [pk]
  name varchar [not null]
  scope varchar [default: "COMMON", note: "COMMON/PRIVATE"]
  start_date timestamptz
  end_date timestamptz
  default_budget_min int
  default_budget_max int
  created_by uuid [note: "FK -> auth.users(id), COMMONならNULL"]
  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  Indexes {
    (scope)
    (created_by)
  }
}

Table "apl.recipient" {
  id uuid [pk]
  name varchar [not null]
  age int
  birthday_date date
  gender varchar [note: "MALE/FEMALE"]
  user_id uuid [note: "FK -> auth.users(id)"]
  relation varchar
  note text
  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
}

Table "apl.event_recipient" {
  id uuid [pk, note: "管理用ID"]
  user_id uuid [note: "FK -> auth.users(id)"]
  event_id uuid [note: "FK -> apl.event.id"]
  recipient_id uuid [note: "FK -> apl.recipient.id"]
  budget_min int
  budget_max int
  created_at timestamptz [not null, default: "now()"]
}

Table "apl.context" {
  id uuid [pk]
  user_id uuid [note: "FK -> auth.users(id)"]
  event_id uuid [note: "FK -> apl.event.id"]
  recipient_id uuid [note: "FK -> apl.recipient.id"]
  budget_min int
  budget_max int
  features_like text[] [not null, default: "{}"]
  features_not_like text[] [not null, default: "{}"]
  features_ng text[] [not null, default: "{}"]
  context_text text [not null]
  context_vector vector(1536)
  embedding_model text [not null]
  embedding_version int [not null, default: 1]
  context_hash text [unique, note: "コンテキストのハッシュ値"]
  created_at timestamptz [not null, default: "now()"]
}

Table "apl.favorite" {
  id uuid [pk]
  user_id uuid [not null, note: "FK -> auth.users(id)"]
  event_id uuid [note: "FK -> apl.event.id, 任意"]
  recipient_id uuid [note: "FK -> apl.recipient.id, 任意"]
  item_id uuid [note: "FK -> apl.item.id"]
  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  Indexes {
    (user_id)
    (event_id)
    (recipient_id)
    (event_id, recipient_id)
    // UNIQUE: (user_id, event_id, recipient_id, item_id)
    // NOTE: NULLをCOALESCEで固定値に潰してUNIQUE化
  }
}

Table "apl.recommendation" {
  id uuid [pk]
  user_id uuid [note: "FK -> auth.users(id)"]
  context_id uuid [note: "FK -> apl.context.id"]
  algorithm text [note: "pgvector_cosine / hybrid / mmr"]
  params jsonb
  created_at timestamptz [not null, default: "now()"]
}

Table "apl.recommendation_item" {
  id uuid [pk]
  recommendation_id uuid [note: "FK -> apl.recommendation.id"]
  item_id uuid [note: "FK -> apl.item.id"]
  rank int
  score float
  vector_score float
  rerank_score float
  reason jsonb

  Indexes {
    (recommendation_id, rank) [unique]
    (recommendation_id, item_id) [unique]
  }
}

// ------------------------------------------------------------
// References
// ------------------------------------------------------------
Ref: "apl.user_profile".id > "auth.users".id

Ref: "apl.event".created_by > "auth.users".id

Ref: "apl.recipient".user_id > "auth.users".id

Ref: "apl.event_recipient".user_id > "auth.users".id
Ref: "apl.event_recipient".event_id > "apl.event".id
Ref: "apl.event_recipient".recipient_id > "apl.recipient".id

Ref: "apl.context".user_id > "auth.users".id
Ref: "apl.context".event_id > "apl.event".id
Ref: "apl.context".recipient_id > "apl.recipient".id

Ref: "apl.favorite".user_id > "auth.users".id
Ref: "apl.favorite".event_id > "apl.event".id
Ref: "apl.favorite".recipient_id > "apl.recipient".id
Ref: "apl.favorite".item_id > "apl.item".id

Ref: "apl.recommendation".user_id > "auth.users".id
Ref: "apl.recommendation".context_id > "apl.context".id

Ref: "apl.recommendation_item".recommendation_id > "apl.recommendation".id
Ref: "apl.recommendation_item".item_id > "apl.item".id

// ------------------------------------------------------------
// 商品系テーブル
// ------------------------------------------------------------
Table "apl.item_rank_snapshot" {
  id uuid [pk]
  rakuten_item_code varchar [not null]
  collected_at timestamptz [not null]
  rakuten_genre_id bigint
  title varchar [null]
  last_build_date timestamptz [not null]
  rank int [not null]

  created_at timestamptz [not null, default: "now()"]

  indexes {
    (rakuten_genre_id, rakuten_item_code, collected_at) [unique]
    (collected_at)
    (rakuten_genre_id, collected_at)
    (rakuten_genre_id, rank, collected_at)
  }
}

Table "apl.item" {
  id uuid [pk]
  rakuten_item_code varchar [not null, unique]

  item_name varchar [not null]
  item_url text [not null]
  affiliate_url text [null]
  catchcopy text [null]
  item_caption text [null]
  image_flag int [null]

  rakuten_shop_code varchar [not null]
  rakuten_genre_id bigint

  credit_card_flag int [null]

  is_active bool [not null, default: false]

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  indexes {
    (rakuten_genre_id)
    (rakuten_shop_code)
    (is_active)
  }
}

Table "apl.item_tag" {
  item_id uuid [not null, ref: > "apl.item".id]
  rakuten_tag_id bigint [not null]
  created_at timestamptz [not null, default: "now()"]

  indexes {
    (item_id, rakuten_tag_id) [pk]
    (rakuten_tag_id)
  }
}

Table "apl.item_image" {
  id bigserial [pk]
  item_id uuid [not null, ref: > "apl.item".id]
  size varchar [not null, note: 'small|medium']
  url text [not null]
  sort_order int [null]
  created_at timestamptz [not null, default: "now()"]

  indexes {
    (item_id)
    (item_id, size, sort_order) [unique]
  }
}

Table "apl.item_market_snapshot" {
  id bigserial [pk]
  item_id uuid [not null, ref: > "apl.item".id]
  collected_at timestamptz [default: "now()"]

  item_price int [null]
  tax_flag int [null]
  postage_flag int [null]

  gift_flag int [null]
  availability int [null]
  asuraku_flag int [null]
  asuraku_closing_time varchar [null]
  asuraku_area varchar [null]

  start_time timestamptz [null]
  end_time timestamptz [null]

  point_rate int [null]
  point_rate_start_time timestamptz [null]
  point_rate_end_time timestamptz [null]

  indexes {
    (item_id, collected_at) [unique]
    (collected_at)
  }
}

Table "apl.item_review_snapshot" {
  id bigserial [pk]
  item_id uuid [not null, ref: > "apl.item".id]
  collected_at timestamptz [default: "now()"]
  review_count int [null]
  review_average float [null]

  indexes {
    (item_id, collected_at) [unique]
    (collected_at)
  }
}

Table "apl.shop" {
  id uuid [pk]
  rakuten_shop_code varchar [not null, unique]
  shop_name varchar [not null]
  shop_url text [not null]
  shop_of_the_year_flag int [null]

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
}

Table "apl.genre" {
  id uuid [pk]
  rakuten_genre_id bigint [not null, unique]
  name varchar [not null]
  level int [not null]
  parent_id uuid [ref: > "apl.genre".id, null]

  last_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_source_version int [null, note: 'hash生成ロジックver']

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  indexes {
    (parent_id)
    (level)
  }
}

Table "apl.tag_group" {
  id uuid [pk]
  rakuten_tag_group_id bigint [not null, unique]
  name varchar [not null]

  last_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_source_version int [null, note: 'hash生成ロジックver']

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
}

Table "apl.tag" {
  id uuid [pk]
  rakuten_tag_id bigint [not null, unique]
  name varchar [not null]
  group_id uuid [not null, ref: > "apl.tag_group".id]
  parent_id uuid [ref: > "apl.tag".id, null]

  last_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_source_version int [null, note: 'hash生成ロジックver']

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  indexes {
    (group_id)
    (parent_id)
  }
}

Table "apl.item_features" {
  item_id uuid [pk, ref: > "apl.item".id]

  price_yen int [null]
  price_log float [null]
  point_rate int [null]
  availability int [null]

  review_average float [null]
  review_count int [null]
  review_count_log float [null]

  rank int [null]
  popularity_score float [null]

  rakuten_genre_id bigint [null]
  tag_ids int[] [null]

  features_version int [not null]

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  indexes {
    (created_at)
    (features_version)
    (popularity_score)
  }
}

Table "apl.item_embedding_source" {
  item_id uuid [pk, ref: > "apl.item".id]
  source_text text [not null]
  source_hash varchar [not null]
  source_version int [not null]

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
}

Table "apl.item_embedding" {
  item_id uuid [not null, ref: > "apl.item".id]
  model varchar [not null]
  embedding vector [not null]

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  indexes {
    (item_id, model) [pk]
    (model)
  }
}

Table "apl.staging" {
  id uuid [pk]
  source varchar [not null]
  entity varchar [not null]
  source_id varchar [not null]
  content_hash text [not null]
  s3_key text [not null]
  etag text
  saved_at timestamptz [not null, default: "now()"]

  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]

  indexes {
    (source, entity, source_id) [unique]
    (source, entity)
    (entity, saved_at)
  }
}

Table apl.target_genre_config {
  id uuid [pk]
  rakuten_genre_id            bigint
  is_enabled          bool [default: true]

  created_at          timestamptz [default: `now()`]
  updated_at          timestamptz [default: `now()`]
}

